adjust code for test