@@ -4,13 +4,13 @@ import com.capgemini.wsb.fitnesstracker.training.api.Training;
 
 import com.capgemini.wsb.fitnesstracker.training.api.TrainingProvider;
 import com.capgemini.wsb.fitnesstracker.user.api.User;
+import com.capgemini.wsb.fitnesstracker.user.internal.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 
 import java.util.Date;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 // TODO: Provide Impl
@@ -20,9 +20,11 @@ public class TrainingServiceImpl implements TrainingProvider {
 
     private final TrainingRepository trainingRepository;
 
+    private final UserRepository userRepository;
+
     @Override
-    public Optional<User> getTraining(final Long trainingId) {
-        throw new UnsupportedOperationException("Not finished yet");
+    public Training getTraining(final Long trainingId) {
+        return trainingRepository.getReferenceById(trainingId);
     }
 
     @Override
@@ -37,15 +39,24 @@ public class TrainingServiceImpl implements TrainingProvider {
 
     @Override
     public Training addTraining(Training training) {
-        if(training.getId() != null) {
+        if (training.getId() != null) {
             throw new IllegalArgumentException("Training has already DB ID, update is not permitted!");
         }
+
+        User user = training.getUser();
+        if (user.getId() == null) {
+            userRepository.save(user);
+        }
+
         return trainingRepository.save(training);
     }
 
+
     @Override
-    public List<Training> getAllFinishTrainings(Date finishData){
-        return trainingRepository.findAll().stream().filter(training -> training.getEndTime().after(finishData)).collect(Collectors.toList());
+    public List<Training> getAllFinishTrainings(Date date){
+        return trainingRepository.findAll().stream()
+                .filter(training -> training.getEndTime().compareTo(date) > 0)
+                .toList();
     }
 
     @Override
@@ -56,5 +67,15 @@ public class TrainingServiceImpl implements TrainingProvider {
     public void updateActivity(long id, ActivityType newActivityType) {
         Training training = trainingRepository.getReferenceById(id);
         training.setActivityType(newActivityType);
+    }
+    public void deleteUserTrainings(long userId) {
+        List<Training> trainings = trainingRepository.findAll().stream()
+                .filter(training -> training.getUser().getId().equals(userId))
+                .toList();
+        trainingRepository.deleteAll(trainings);
+    }
+
+    public Training updateTraining(Training training) {
+        return trainingRepository.save(training);
     }
 }
